ft_containers-unit-test/logs.txt
In file included from ../vector_tests/operator >=.cpp:1:
In file included from ../vector_tests/../system/system_methods.ipp:2:
In file included from ../vector_tests/../system/lib.hpp:30:
../vector_tests/../system/Alloc.hpp:55:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../vector_tests/../system/Alloc.hpp:58:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
../vector_tests/../system/Alloc.hpp:164:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../vector_tests/../system/Alloc.hpp:167:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
4 warnings generated.
ed.
ated.
r_tests/insert(range).cpp:2:
In file included from ../vector_tests/__service.ipp:3:
../vector_tests/../../../vector.hpp:191:24: error: invalid operands to binary expression ('ft::vector<A>::value_type' (aka 'A') and 'A')
            if (tmp[i] != *position)
                ~~~~~~ ^  ~~~~~~~~~
../vector_tests/insert(range).cpp:86:14: note: in instantiation of function template specialization 'ft::vector<A>::insert<ft::random_it<B *> >' requested here
    try { vv.insert(vv.begin(), v1.begin(), v1.end()); }
             ^
../vector_tests/insert(range).cpp:97:68: note: in instantiation of function template specialization 'insert_test_3<int>' requested here
    exit(run_vector_unit_test<int>("insert(range)", insert_test_3, insert_test_3));
                                                                   ^
../vector_tests/../../../random_it.hpp:96:10: note: candidate template ignored: could not match 'random_it<type-parameter-0-0>' against 'A'
    bool operator !=(const ft::random_it<T>& x, const ft::random_it<T>& y){return x.base() != y.base();}
         ^
4 warnings and 1 error generated.
